@@ -1,3 +1,8 @@
+2012-06-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* ext.c (load_ext): Remove use of RTLD_GLOBAL. Not needed in new
+	scheme. Clean up error messages.
+
 2012-06-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* configure.ac: Remove use of -export-dynamic for GCC.
